# near-payment-agent

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
demo/relayed-agent-pay/: README.md  package-lock.json  package.json  relayed-pay.ts
docs/: design.md  testnet-evidence.md  threat-model.md  x402-exact-agent-scheme.md
mock-ft/: Cargo.toml
mock-ft/src/: lib.rs
scripts/: testnet-proof-real-token.sh  testnet-proof.sh
src/: lib.rs
tests/: least_privilege.rs
