[package]
name = "near-payment-agent"
version = "0.1.0"
edition = "2021"
# Pin to the installed toolchain; the MSRV-aware resolver below then selects
# near-sdk versions compatible with it (latest near-sdk targets a newer rustc).
rust-version = "1.91"
license = "Apache-2.0"
repository = "https://github.com/mikedotexe/near-payment-agent"
description = "Least-privilege NEP-141 payment-agent for NEAR: a method-scoped, capped payment authority a custodian/agent drives with a function-call key — never full-access."

[lib]
crate-type = ["cdylib", "rlib"]

# Workspace root, opting into the MSRV-aware dependency resolver so `cargo` picks
# the newest dependency versions whose rust-version <= ours. `mock-ft` is a
# test-only NEP-141 fixture.
[workspace]
resolver = "3"
members = ["mock-ft"]

[dependencies]
near-sdk = "5"

[dev-dependencies]
near-sdk = { version = "5", features = ["unit-testing"] }
near-workspaces = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde_json = "1"

# Fast local/test builds. `overflow-checks` stays on (the caps rely on checked
# math). The canonical, size-optimized reproducible artifact (Phase 5) re-enables
# full optimization via cargo-near's reproducible (docker) build.
[profile.release]
codegen-units = 16
opt-level = "z"
lto = false
debug = false
panic = "abort"
overflow-checks = true
